--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,8 +23,10 @@ a:hover {
 }
 
 body {
+  background-image: url('./assets/background.jpg');
+  background-size:cover;
   margin: 0;
-  display: flex;
+  display:flow-root;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
